--- a/Flagrum.Web/Features/SequenceEditor/SequenceEditor.razor
+++ b/Flagrum.Web/Features/SequenceEditor/SequenceEditor.razor
@@ -1,4 +1,5 @@
-﻿@page "/sequenceeditor"
+﻿@page "/node"
+@page "/node/{UriBase64}"
 
 <CascadingValue Value="Diagram">
     <div class="flex-grow h-full flex flex-row">
