--- a/Flagrum.Web/Features/SequenceEditor/SequenceEditor.razor
+++ b/Flagrum.Web/Features/SequenceEditor/SequenceEditor.razor
@@ -14,7 +14,7 @@
         <Button Text="Run Automatic Layout" OnClick="RunLayout"/>
     </div>
     <div class="flex-grow h-full flex flex-row">
-        @* <NodeExplorer/> *@
+        <NodeExplorer/>
         <div class="flex-grow" style="width: 100%; height: 100%;">
             <DiagramCanvas Class="grid"/>
         </div>
